<resources>
    <string name="app_name">ShoeSize</string>
    <string name="viewall"><u>View all</u></string>
    <string name="bestseller">Best Seller</string>
    <string name="trending">Best Seller</string>
    <string name="newinstock">New In Stock</string>
    <string name="quesiton">What are you look for ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_shoesize">Welcome to SHOESIZE</string>
    <string name="please_fill_up_below_information_to_complete_register">Please fill up below information to complete register</string>
    <string name="update_new_shoe">Update New Shoe</string>
    <string name="view_my_list">View My List</string>
    <string name="remove_shoe">Remove Shoe</string>
    <string name="add">add</string>
    <string name="remove">Remove</string>
    <string name="list">list</string>
    <string name="back">back</string>
    <string name="add_new_shoe">ADD NEW SHOE</string>
    <string name="shoe_s_name">Shoe\'s name</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="release_day">Release day</string>
    <string name="name_of_the_shoe">Name of the shoe</string>
    <string name="price_of_the_shoe">price of the shoe</string>
    <string name="color_of_the_shoe">Color of the shoe</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="confirmation_check">Enter the work \'confirm\' into the box for the confirmation.</string>
    <string name="confirm">confirm</string>
    <string name="current_selling_list">CHECKOUT</string>
    <string name="description">Description</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="shopping_cart"><u>Cart Page</u></string>
    <string name="search_your_shoe_here"><u>Search your shoe here</u></string>
    <string name="hi_mr_thanh">Hi, Mr Thanh</string>
    <string name="ask_user_today">What are you going to do today?</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="home">HOME</string>
    <string name="account">ACCOUNT</string>
    <string name="cart">CART</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="join_now"><u>Join now</u></string>
    <string name="as_buyer">as buyer</string>
    <string name="as_seller">as seller</string>
    <string name="image_of_shoe">Image of Shoe</string>
    <string name="shoesize"><u>ShoeSize</u></string>
    <string name="search"><u>Search</u></string>
    <string name="place_order">Place Order</string>
    <string name="agree_with_term_of_purchase_agreement">Agree with term of purchase agreement</string>
    <string name="selected_item_0">Selected Item: 0</string>
    <string name="total_0">Total: $0</string>
    <string name="my_profile"><u>My Profile</u></string>
    <string name="unlucky_team">Unlucky Team</string>
    <string name="sample_address">702 Nguyễn Văn Linh, Tân Hưng, Quận 7, Thánh Phố Hồ Chí Minh</string>
    <string name="log_out">Log Out</string>
    <string name="style_of_shoe">Style of Shoe</string>
    <string name="namenotdot">Name</string>
    <string name="phone_numberNoDot">Phone Number</string>
    <string name="payment_method">Select Payment Method</string>
    <string name="total">Total:</string>
    <string name="map">Map view</string>
    <string name="Payment_methoc">Payment Method</string>
    <string-array name="payment_method">
        <item>Cash</item>
    </string-array>
</resources>