<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.buyer.BuyerPayment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="horizontal">

            <Button
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/current_selling_list"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp">

            <TextView
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Total: $391"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/total">
            </TextView>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:minHeight="48dp"></EditText>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_address"
                android:inputType="text"
                android:id="@+id/address">
            </EditText>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:minHeight="48dp"></EditText>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Order"
        android:layout_marginStart="50dp">
    </Button>

</LinearLayout>