<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.seller.SellerList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/yellow">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/back"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="90dp"
                app:srcCompat="@drawable/ava">

            </ImageView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_selling_list"
            android:textAlignment="center"
            android:textColor="#15F6F6"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp">
        </TextView>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp">
    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add">
        </Button>

        <Button
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:id="@+id/remove">
        </Button>

    </LinearLayout>

</LinearLayout>