<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.seller.SellerRemoveShoe"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/yellow">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/back"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="90dp"
                app:srcCompat="@drawable/ava">

            </ImageView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_shoe"
            android:textAlignment="center"
            android:textColor="#15F6F6"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    app:srcCompat="@drawable/a"
                    android:id="@+id/image">
                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Air Jordan 1 Mid Triple White GS"
                        android:id="@+id/name">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Chicago Lost and Found"
                        android:id="@+id/supName">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$281"
                        android:textColor="@color/blue"
                        android:id="@+id/price">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Enter the word 'Confirm' into the box for the confirmation"
            android:textSize="25sp"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Confirm"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"></EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add">
        </Button>

        <Button
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/list">
        </Button>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>